scroll jump fixed

--- a/layout/styles/partials/map.scss
+++ b/layout/styles/partials/map.scss
@@ -18,7 +18,7 @@
   top: 0;
   left: 0;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: scroll;
   text-align: center;
   background: #cde1e8;
   /**/
